# rumk

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PRD.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: bad.mk  good.mk
src/: config.rs  diagnostic.rs  fix.rs  lib.rs  main.rs  parser.rs  rules.rs
src/rules/: best_practices.rs  style.rs  syntax.rs
tests/: parser_test.rs
