[package]
name = "rumk"
version = "0.0.1"
edition = "2021"
authors = ["Ruben Jongejan <ruben.jongejan@gmail.com>"]
description = "A fast linter for Makefiles"
repository = "https://github.com/rvben/rumk"
license = "MIT"
readme = "README.md"
keywords = ["makefile", "linter", "make", "build", "tool"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
regex = "1.10"
walkdir = "2.5"
rayon = "1.10"
once_cell = "1.19"

[dev-dependencies]
insta = "1.39"
tempfile = "3.10"
pretty_assertions = "1.4"

[[bin]]
name = "rumk"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3